--- a/frontend/src/components/blogs/blog.css
+++ b/frontend/src/components/blogs/blog.css
@@ -8,7 +8,8 @@
   border-style: solid;
   border-color: #156064;
 }
-.blog-preview, .create {
+.blog-preview,
+.create {
   margin: 5px;
   border: 10px;
   border-style: solid;
