--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Lexend Deca", sans-serif;
 }
 
 .App {
@@ -13,4 +11,9 @@ body {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  min-height: 100vh;
+}
+
+.footer {
+  margin-top: auto;
 }
