--- a/frontend/src/components/blogs/blog.css
+++ b/frontend/src/components/blogs/blog.css
@@ -1,17 +1,87 @@
-.blog-list {
-  display: flex;
-  flex-flow: row wrap;
-}
-.blog-details {
-  margin: 5px;
-  border: 10px;
-  border-style: solid;
-  border-color: #156064;
-}
-.blog-preview,
+@import url('https://fonts.googleapis.com/css2?family=Koulen&family=Overpass+Mono:wght@300&family=Overpass:wght@100&display=swap');
+
 .create {
   margin: 5px;
   border: 10px;
   border-style: solid;
   border-color: #156064;
 }
+
+body {
+  background: hsla(210, 20%, 90%, 1);
+  padding: 2em 0;
+  line-height: 1.6;
+  display: flex;
+  justify-content: center;
+  min-height: 100vh;
+  align-items: center;
+  font-family: Lexend Deca Regular, 32
+}
+
+.title {
+  margin: 0;
+  color: #156064;
+  font-family: Lexend Deca Regular, 32
+}
+
+.cards {
+  display: flex;
+  justify-content: center;
+  align-content: space-between;
+  flex-wrap:wrap;
+}
+
+.card {
+  background: #fff;
+  width: 24em;
+  border-radius: 0.6em;
+  margin: 1em;
+  overflow: hidden;
+  cursor: pointer;
+  box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25), 0 8px 16px -8px hsla(0, 0%, 0%, 0.3), 0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
+  transition: all ease 200ms;
+}
+
+#button {
+  width: 24em;
+  border-radius: 0.6em;
+  margin: 1em;
+}
+
+ .card:hover {
+  transform: scale(1.03);
+  box-shadow: 0 13px 40px -5px hsla(240, 30.1%, 28%, 0.12), 0 8px 32px -8px hsla(0, 0%, 0%, 0.14), 0 -6px 32px -6px hsla(0, 0%, 0%, 0.02);
+} 
+
+#oneCard  {
+  color: #222;
+  margin-top: 1em;
+  line-height: 1.4;
+  font-size: 1.3em;
+  font-weight: 500;
+  pointer-events: none;
+  
+}
+
+#font {
+  font: Overpass, 18; 
+  font-family: Overpass, 18; 
+  }
+
+/* .card .title {
+  color: #222;
+  margin-top: -0.2em;
+  line-height: 1.4;
+  font-size: 1.3em;
+  font-weight: 500;
+  font-family: "Lexend Deca", sans-serif;
+  transition: all ease-in 100ms;
+} */
+
+/* .card .body {
+  color: #777;
+} */
+
+/* .card-body {
+  padding: 1.2em;
+} */
