--- a/frontend/src/components/FunnelCarousel/Carousel.css
+++ b/frontend/src/components/FunnelCarousel/Carousel.css
@@ -5,33 +5,6 @@
   margin-right: 1rem;
 }
 
-/* .carousel-control-next {
-  position: static !important;
-  top: 50%;
-  right: -50%;
-  top: 20%;
-}
-
-.carousel-control-prev > span {
-  position: static !important;
-  top: 20%;
-  left: -50%;
-} */
-
-[role="button"] {
-  size: 5px;
-  margin-top: 25px;
-  height: 50px;
-}
-
-/* a.carousel-control-next {
-  left: 100%;
-}
-
-a.carousel-control-prev {
-  left: -15%;
-} */
-
 .carousel-control.left {
   margin-left: -25px;
 }
@@ -59,4 +32,29 @@ a.carousel-control-prev {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+/* REARRANGING PREV / NEXT CONTROLS */
+
+.carousel-control-prev {
+  /* position: absolute; */
+  position: static !important;
+  display: inline !important;
+}
+
+.carousel-control-next {
+  /* position: absolute; */
+  position: static !important;
+  display: inline !important;
+}
+
+.carousel-control-next-icon,
+.carousel-control-prev-icon {
+  display: inline-block;
+  width: 4rem !important;
+  height: 4rem !important;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: 100% 100%;
+  margin-top: 5vh;
 }
