--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -78,3 +78,23 @@
     padding-right: 9px;
   }
 }
+
+/* .logo-container {
+  display: flex;
+  flex-direction: row-reverse;
+}
+*/
+/* .logo-footer {
+  display: block;
+  height: 35%;
+  width: 35%;
+  padding-bottom: 35px;
+  margin-left: 500px;
+}
+
+@media only screen and (max-width: 700px) {
+  .logo-footer {
+    height: 35%;
+    width: 35%;
+  }
+} */
