--- a/frontend/src/components/HomepageSection1.css
+++ b/frontend/src/components/HomepageSection1.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   background-color: #c97c5d;
-  width: 100vw;
+  /*   width: 100vw; */
   color: #fff;
 }
 
