--- a/frontend/src/components/blogs/blog.css
+++ b/frontend/src/components/blogs/blog.css
@@ -32,7 +32,7 @@
 
 .card {
   background: #fff;
-  max-width: 98%;
+  /*  max-width: 100%; */
   border-radius: 0.6em;
   margin: 1em;
   overflow: hidden;
