--- a/frontend/src/pages/home/Home.css
+++ b/frontend/src/pages/home/Home.css
@@ -3,11 +3,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* width: 1360px; */
+  /*  width: 100%;  */
   padding: 20px 0px;
 }
-@media only screen and (max-width: 1366px) {
+/* @media only screen and (max-width: 1366px) {
   .home-container {
     width: 100%;
   }
-}
+} */
